# AI-Writer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RESOLUTION_SUMMARY.md  ai writer.py  main.py  pyproject.toml  todos.md
docs/: development.md  user_guide.md
scripts/: build.py  dev_setup.py
src/ai_writer/: __init__.py  main.py
src/ai_writer/core/: __init__.py  file_manager.py  ollama_client.py  prompt_manager.py  spell_checker.py
src/ai_writer/ui/: __init__.py  main_window.py  splash_screen.py  splash_screen_impl.py
src/ai_writer/ui/components/: __init__.py  editor_toolbar.py  main_menu.py  prompt_manager.py  prompt_selector.py  settings_dialog.py
src/ai_writer/ui/styles/: __init__.py  dark_theme.py  light_theme.py
tests/: __init__.py  test_config.py  test_file_manager.py  test_ollama_client.py
tests/test_ui/: __init__.py  test_main_window.py
