[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-writer"
version = "0.1.0"
description = "A sleek desktop application for AI-assisted writing powered by Ollama and built with PyQt5"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Laszlobeer", email = ""},
]
keywords = ["ai", "writing", "ollama", "pyqt5", "desktop", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "pyqt5>=5.15.11",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.7",
    "pre-commit>=3.0",
]

[project.scripts]
ai-writer = "ai_writer.main:main"

[project.urls]
Homepage = "https://github.com/Laszlobeer/AI-Writer"
Documentation = "https://github.com/Laszlobeer/AI-Writer#readme"
Repository = "https://github.com/Laszlobeer/AI-Writer"
"Bug Reports" = "https://github.com/Laszlobeer/AI-Writer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_writer"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.1",
]
